@@ -1,3 +1,9 @@
+2020-07-31 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/gen.c,
+	  support/regression/tests/bug-3083.c:
+	  Fix bug #3083.
+
 2020-07-31 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCpeeph.c: removed portIsDS390, fixed isPort() coding style
